--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    h1>Pincode Lookup</h1>
-
-    <label for="pincodeInput">Enter Pincode:</label>
-    <input type="text" id="pincodeInput" maxlength="6" />
-    <button onclick="lookupPincode()">Lookup</button>
-
-    <div id="loader"></div>
-
-    <label for="filterInput">Filter by Post Office Name:</label>
-    <input type="text" id="filterInput" oninput="filterResults()" />
-
-    <div id="resultContainer"></div>
+    <div id="root"></div>
 </body>
 </html>
